# adaptive-importance-sampling-ice

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Dockerfile.jupyter  MANIFEST.in  Makefile  QUICK_FIXES.md  README.md  RELEASE.md  ROADMAP.md  docker-compose.yml  mypy.ini  pyproject.toml  quickstart.py  safe_ice.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/tools/: deps_health.js
.github/workflows/: architecture-diagrams.yml  auto-pyproject-update.yml  auto-upgrade-pyproject.yml  ci.yml  dependancy_review.yml  dependency-health.yml  monthly-reminder.yml  performance-regression.yml  release.yml  test.yml
benchmarks/: architecture_config.py
conda.recipe/: meta.yaml
docs/: Makefile  requirements.txt
docs/architecture/: README.md  architecture-overview.mmd  class-diagram.mmd
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  theory.rst
docs/source/api/: core.rst  distributions.rst
docs/source/examples/: index.rst
examples/: advanced_features.py  basic_usage.py  benchmark_comparison.py  high_dimensional.py  performance_benchmark.py
safe_ice/: __init__.py  cli.py  py.typed
safe_ice/analysis/: __init__.py  interactive_visualization.py  performance.py  visualization.py  vizualization.py
safe_ice/core/: __init__.py  adaptive_safe_ice.py  parameters.py  safe_ice.py  safe_ice_optimized.py
safe_ice/distributions/: __init__.py  mixture.py  nakagami.py  nakagami_stable.py  vmf.py
safe_ice/optimization/: __init__.py  penalized_em.py
safe_ice/problems/: __init__.py  advanced_problems.py  benchmarks.py  heat_transfer.py
safe_ice/utils/: __init__.py  performance.py
scripts/: bump_version.py  release_checklist.md
tests/: test_benchmarks.py  test_distributions.py  test_integration.py  test_safe_ice.py
