[metadata]
name = safe-ice
version = attr: safe_ice.__version__
author = Safe-ICE Contributors
description = Safe Cross-Entropy-Based Importance Sampling for Rare Event Simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/adaptive-importance-sampling-ice
project_urls =
    Bug Tracker = https://github.com/yourusername/adaptive-importance-sampling-ice/issues
    Documentation = https://safe-ice.readthedocs.io/
    Source Code = https://github.com/yourusername/adaptive-importance-sampling-ice
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    matplotlib>=3.5.0
    typing-extensions>=4.0.0;python_version<"3.10"

[options.packages.find]
exclude =
    tests*
    examples*
    docs*

[options.package_data]
safe_ice = py.typed

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-xdist>=2.5.0
    pytest-benchmark>=3.4.1
    black>=22.0.0
    isort>=5.10.0
    ruff>=0.0.261
    mypy>=0.991
    pre-commit>=2.20.0
viz =
    plotly>=5.0.0
    seaborn>=0.11.0
    pandas>=1.3.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autobuild>=2021.3.14
perf =
    numba>=0.56.0
    psutil>=5.9.0
all =
    %(dev)s
    %(viz)s
    %(docs)s
    %(perf)s

[options.entry_points]
console_scripts =
    safe-ice = safe_ice.cli:main

[tool:pytest]
minversion = 7.0
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -ra
    --strict-markers
    --ignore=docs
    --ignore=setup.py
    --ignore=scripts
    --doctest-modules
    --cov=safe_ice
    --cov-branch
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    benchmark: marks tests as benchmark tests

[coverage:run]
source = safe_ice
branch = True
parallel = True
omit =
    */tests/*
    */test_*.py
    */__init__.py
    */cli.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
precision = 2
show_missing = True

[coverage:html]
directory = htmlcov

[mypy]
python_version = 3.9
strict = True
warn_return_any = True
warn_unused_configs = True
no_implicit_reexport = True
namespace_packages = True
show_error_codes = True
show_column_numbers = True
pretty = True

[mypy-tests.*]
ignore_errors = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-numba.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

[isort]
profile = black
line_length = 88
known_first_party = safe_ice
skip_gitignore = True
force_single_line = False
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs,
    build,
    dist,
    .eggs,
    *.egg

[pydocstyle]
convention = numpy
add-ignore = D100,D104,D105,D107
match-dir = (?!tests).*

[wheel]
universal = 0
